--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agu+Display&family=Delius&family=Delius+Swash+Caps&family=Marck+Script&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Tilt+Neon&display=swap" rel="stylesheet">
+
    <script>
-        const userPref = localStorage.theme;
+        const userPref = localStorage.getItem('theme');
       if (
         userPref === "dark" ||
         (!userPref && window.matchMedia("(prefers-color-scheme: dark)").matches)
